[Task] Improve items style, change global font

--- a/src/components/item.css
+++ b/src/components/item.css
@@ -1,13 +1,21 @@
-*{
-  color: green;
+.item{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-img{
+.item img{
   max-width: 280px;
   max-height: 560px;
-
 }
 
-p{
-  width: 80ch;
+.item h4{
+  margin-bottom: 2em;
 }
+
+.item p{
+  margin-top: 2em;
+  font-weight: bolder;
+}
+
