--- a/src/components/store.css
+++ b/src/components/store.css
@@ -1,7 +1,16 @@
 .header-banner{
   display: flex;
   flex-direction: row ;
+  justify-content: space-around;
+  align-items: baseline;
+  margin-top: 3em;
+  border-style: dashed;
+  border-left: none;
+  border-right: none;
+}
 
+.header-banner h1{
+  font-size: 5vh; 
 }
 
 .display{
