--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 
 
 button{
+  position: relative;
   background-color: #ffffff;
   border:thin 2px;
   border-color: black;
@@ -17,4 +18,5 @@ button:hover{
   border-right-width:  3px;
   border-bottom-width: 3px;
   font-size: 19px;
+  cursor: pointer;
 }
